deploy/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inspekt
  namespace: default
spec:
  ports:
  - name: http
    targetPort: 8000
    port: 80
  selector:
    app: inspekt
