deploy/ingress-example.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: inspekt
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: inspekt
              servicePort: http
